Tools for testing

--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
     },
     "devDependencies": {
         "@types/mocha": "5.2.5",
-        "mocha": "5.2.0",
-        "typedoc": "0.7.2",
         "@types/node": "10.12.2",
-        "benchmark": "2.1.4",
-        "typescript": "3.1.6",
-        "browserify": "14.4.0",
-        "uglify-js": "3.1.2",
-        "immutable": "4.0.0-rc.9",
-        "hamt": "2.2.2",
-        "mocha-testcheck": "1.0.0-rc.0",
-        "request-promise-native": "1.0.5",
         "@types/request-promise-native": "1.0.15",
-        "request": "2.88.0"
+        "benchmark": "2.1.4",
+        "browserify": "14.4.0",
+        "hamt": "2.2.2",
+        "immutable": "4.0.0-rc.9",
+        "mocha": "5.2.0",
+        "mocha-testcheck": "1.0.0-rc.0",
+        "request": "2.88.0",
+        "request-promise-native": "1.0.5",
+        "ts-node": "^8.0.2",
+        "typedoc": "0.7.2",
+        "typescript": "^3.1.6",
+        "uglify-js": "3.1.2"
     },
     "keywords": [
         "typescript",
